# garmin-connect-export

./: .gitignore  gcexport3.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
