[tool.ruff]
# Increase the maximum line length to 120 characters.
line-length = 120
# select = [
#   "E",   # pycodestyle
#   "F",   # pyflakes
#   "UP",  # pyupgrade
#   "D",   # pydocstyle
#]
ignore = ["T201","ERA001"]
select = ["ALL"]
src = ["src"]

[project]
# Support Python 3.12+.
requires-python = ">=3.12"
