[project]
name = "garmin-connect-export"
# Support Python 3.12+.
requires-python = ">=3.12"

[tool.ruff]
# Increase the maximum line length to 120 characters.
line-length = 120
# select = [
#   "E",   # pycodestyle
#   "F",   # pyflakes
#   "UP",  # pyupgrade
#   "D",   # pydocstyle
#]
lint.ignore = ["D203","D212","FIX002","T201","ERA001"]
lint.select = ["ALL"]
src = ["src"]

