[project]
name = "garmin-connect-export"
requires-python = ">=3.12"
version = "3.0.0"

[tool.ruff]
line-length = 120
# select = [
#   "E",   # pycodestyle
#   "F",   # pyflakes
#   "UP",  # pyupgrade
#   "D",   # pydocstyle
#]
lint.ignore = ["D203","D212","FIX002","T201","ERA001"]
lint.select = ["ALL"]
src = ["src"]
